examples/failing/TypeError.purs
module TypeError where

  test = x ++ "A"
